--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Título da página</title>
+    <title>GBSNT</title>
     <meta charset="utf-8">
   </head>
-  <body>
-    Gabriel Santos
+  <body>gi
+    GBSNT
   </body>
 </html>
