--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>GBSNT</title>
+    <title>Gabriel Santos</title>
     <meta charset="utf-8">
   </head>
   <body>
