--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>GBSNT</title>
+    <title>Gabriel Santos</title>
     <meta charset="utf-8">
   </head>
   <body>
-    GBSNT
+    Gabriel Santos
   </body>
 </html>
