--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
   </head>
   <body>
-    Gabriel Santos
-    Publicitário
-    contato@gbsnt.com.br
-    (51)99845-0013
+    <p>Gabriel Santos</br>
+    Publicitário</br>
+    contato@gbsnt.com.br</br>
+    (51)99845-0013</br>
+    </p>
   </body>
 </html>
