--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <p>Gabriel Santos</br>
+    <p><b>Gabriel Santos</b></br>
     Publicitário</br>
     contato@gbsnt.com.br</br>
     (51)99845-0013</br>
