--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <p><b>Gabriel Santos</b></br>
+    <p>Gabriel Santos</br>
     Publicitário</br>
     contato@gbsnt.com.br</br>
-    (51)99845-0013</br>
+    (51) 99845-0013</br>
     </p>
   </body>
 </html>
